# serialproto

./: CMakeLists.txt  README.md
Interface/: CMessage.h  CParameter.h  CParser.h  IParser.h
Sample/: CMessage.cpp  CParameter.cpp  CParser.cpp  InitializeStart.cpp  InitializeStart.h  MessageBase.cpp  MessageBase.h  analysis.cpp  connectstatechanged.cpp  connectstatechanged.h  duckaudio.cpp  duckaudio.h  include.h  initializefinish.cpp  initializefinish.h  initializerespond.cpp  initializerespond.h  main.cpp  requestbuttonkey.cpp  requestbuttonkey.h  requestknob.cpp  requestknob.h  requestphonekey.cpp  requestphonekey.h  setbrakesignal.cpp  setbrakesignal.h  setrighthand.cpp  setrighthand.h  setwindowcaption.cpp  setwindowcaption.h  showwindow.cpp  showwindow.h  streamsstatechanged.cpp  streamsstatechanged.h  touchpaddata.cpp  touchpaddata.h  touchpaddatainit.cpp  touchpaddatainit.h  touchpaddatastart.cpp  touchpaddatastart.h  (+5 more)
Tests/: MessageValidationTest.cpp
